--- a/Flatfy V3/css/animate.css
+++ b/Flatfy V3/css/animate.css
@@ -241,71 +241,90 @@ Copyright (c) 2013 Daniel Eden
   animation-name: shake;
 }
 
-@-webkit-keyframes swing {
-  20% {
-    -webkit-transform: rotate(15deg);
-    transform: rotate(15deg);
+@-webkit-keyframes swing
+{
+  15%
+  {
+    -webkit-transform: translateX(9px);
+    transform: translateX(9px);
   }
 
-  40% {
-    -webkit-transform: rotate(-10deg);
-    transform: rotate(-10deg);
+  30%
+  {
+    -webkit-transform: translateX(-9px);
+    transform: translateX(-9px);
   }
 
-  60% {
-    -webkit-transform: rotate(5deg);
-    transform: rotate(5deg);
+  40%
+  {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
   }
 
-  80% {
-    -webkit-transform: rotate(-5deg);
-    transform: rotate(-5deg);
+  50%
+  {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px);
   }
 
-  100% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-}
-
-@keyframes swing {
-  20% {
-    -webkit-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    transform: rotate(15deg);
+  65%
+  {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
   }
 
-  40% {
-    -webkit-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-  }
-
-  60% {
-    -webkit-transform: rotate(5deg);
-    -ms-transform: rotate(5deg);
-    transform: rotate(5deg);
-  }
-
-  80% {
-    -webkit-transform: rotate(-5deg);
-    -ms-transform: rotate(-5deg);
-    transform: rotate(-5deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    transform: rotate(0deg);
+  100%
+  {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
-.swing {
-  -webkit-transform-origin: top center;
-  -ms-transform-origin: top center;
-  transform-origin: top center;
-  -webkit-animation-name: swing;
-  animation-name: swing;
+@keyframes swing
+{
+  15%
+  {
+    -webkit-transform: translateX(9px);
+    transform: translateX(9px);
+  }
+
+  30%
+  {
+    -webkit-transform: translateX(-9px);
+    transform: translateX(-9px);
+  }
+
+  40%
+  {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+
+  50%
+  {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px);
+  }
+
+  65%
+  {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+
+  100%
+  {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+
+.swing:hover
+{
+  -webkit-animation: swing 0.6s ease;
+  animation: swing 0.6s ease;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
 
 @-webkit-keyframes tada {
