--- a/Flatfy V3/css/general.css
+++ b/Flatfy V3/css/general.css
@@ -242,7 +242,7 @@ color: #ECEBEB;
 	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 50px;
 	color: #f8f8f8;
-	background: url(../img/intro/intro5.jpg) no-repeat center center;
+	background: url(../img/bg.jpg) no-repeat center center;
 	background-size: cover;
 	text-align: center;
 }
@@ -305,13 +305,6 @@ color: #ECEBEB;
 	border-top: 3px solid #e7e7e7;
 	width: 200px;
 	float: left;
-}
-
-.banner {
-	padding: 100px 0;
-	color: #f8f8f8;
-	background: url(../img/intro/banner-bg.jpg) no-repeat center center;
-	background-size: cover;
 }
 
 /* Animate */
