--- a/Flatfy V3/css/style.css
+++ b/Flatfy V3/css/style.css
@@ -3479,7 +3479,7 @@ fieldset[disabled] .twitter-typeahead .tt-hint {
   position: relative;
   text-align: left;
   width: 80px;
-  -webkit-mask: url('../images/switch/mask.png') 0 0 no-repeat;
+  -webkit-mask: url('') 0 0 no-repeat;
   mask: url('../images/switch/mask.png') 0 0 no-repeat;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -3765,7 +3765,7 @@ fieldset[disabled] .twitter-typeahead .tt-hint {
   text-align: center;
 }
 .tile.tile-hot:before {
-  background: url(../images/tile/ribbon.png) 0 0 no-repeat;
+  background: url(../img/bg.jpg) 0 0 no-repeat;
   background-size: 82px 82px;
   content: '';
   height: 82px;
